My-projekt.html

--- a/My-projekt.html
+++ b/My-projekt.html
@@ -13,6 +13,7 @@
             <span class="time"></span>
         </div>
         <div class="container">
+            <div>
             <h1> Farzad Sarfaraz</h1>
             <h2> über mich </h2>
             <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz,<br> und ich bin ein Anfänger in der Webentwicklung und im Programmieren.
@@ -22,7 +23,10 @@
             <span class="bx-bxs-hand-right"><i class='bx bxs-hand-right'></i></span>
             <a href="#skill-section" class="read-more">Mehr erfahren<i class='bx bxs-right-arrow'></i></a>
         </div>
-        <img src="F. Sarfaraz.jpg" alt="my">
+        <div>
+            <img src="F. Sarfaraz.jpg" alt="my">
+        </div>
+        </div>
     </header>
     <section id="skill-section">
         <h2> Mein Skillset</h2>
@@ -50,8 +54,8 @@
         <a href="#project-section" class="click_here"> click here<br><pre>   &DownArrow;</pre> </a>
     </section>
     <section id="project-section">
-        <h2> Mein Werdegang </h2>
         <div class="flex-container">
+            <h2> Mein Werdegang </h2>
             <details>
                 <summary id="summary"><span class="number">1 &downarrow;</span><h3>BILDUNGSWEG (hier anklicken)</h2></summary>
                     <div class="text-container">
@@ -85,7 +89,7 @@
                     </div>
             </details>
             <details>
-                <summary id="summary"><span class="number">2 &downarrow;</span><h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h2></summary>
+                <summary><span class="number">2 &downarrow;</span><h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h2></summary>
                 <div class="text-container">
                     <li>02/2019 – 08/2021</li>
                     <b>Die schwedische Menschenrechtsorganisation „We Act“, Kabul, Afghanistan</b>
@@ -106,7 +110,7 @@
                 </div>
             </details>
             <details>
-                <summary id="summary"><span class="number">3 &downarrow;</span><h3>Weitere Informationen (hier anklicken)</h2></summary>
+                <summary><span class="number">3 &downarrow;</span><h3>Weitere Informationen (hier anklicken)</h2></summary>
                 <div class="text-container">
                     <p>Bitte klicken Sie auf den "CV"-Button (unten in der rechten Ecke), um weitere Informationen über mich zu erhalten. </p>
               </div>
