My-projekt.html

--- a/My-projekt.html
+++ b/My-projekt.html
@@ -110,13 +110,12 @@
                 </div>
             </details>
             <details>
-                <summary><span class="number">3 &downarrow;</span><h3>Weitere Informationen (hier anklicken)</h2></summary>
+                <summary id="summary"><span class="number">3 &downarrow;</span><h3>Weitere Informationen (hier anklicken)</h2></summary>
                 <div class="text-container">
                     <p>Bitte klicken Sie auf den "CV"-Button (unten in der rechten Ecke), um weitere Informationen über mich zu erhalten. </p>
               </div>
             </details>
         </div>
-
         <a href="#grid-container" class="click_on_me">Click on me <br><pre>    &DownArrow;</pre></a>
     </section>
     <footer>
