My-projekt.html

--- a/My-projekt.html
+++ b/My-projekt.html
@@ -138,6 +138,7 @@
         <a href="F. Sarfaraz Lebenslauf.pdf" class="click_here2" target="_blank" style.float="right">C<i class='bx bxs-file-pdf'></i>V</a>
     </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="new.js"></script>
 </body>
 </html>
