--- a/My-projekt.html
+++ b/My-projekt.html
@@ -6,25 +6,25 @@
     <title>Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+    </style>
 </head>
 <body>
     <header>
-        <div>
-            <span class="time"></span>
-        </div>
+        <span class="time"></span>
         <div class="container">
-            <div>
+            <div class="headerimg">
+                <img src="F. Sarfaraz.jpg" alt="my">
+            </div>
+            <div class="first_child_container">
             <h1> Farzad Sarfaraz</h1>
             <h2> über mich </h2>
             <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz,<br> und ich bin ein Anfänger in der Webentwicklung und im Programmieren.
                  <br> Momentan suche ich nach einer interessanten Ausbildung oder <br>Studienangeboten im Bereich Informatik. Es freut mich sehr,<br> Sie hier begrüßen zu dürfen.<br>
                  Gerne gebe ich Ihnen einen Einblick in meine Welt.</p>
             <br/>
-            <span class="bx-bxs-hand-right"><i class='bx bxs-hand-right'></i></span>
             <a href="#skill-section" class="read-more">Mehr erfahren<i class='bx bxs-right-arrow'></i></a>
-        </div>
-        <div>
-            <img src="F. Sarfaraz.jpg" alt="my">
         </div>
         </div>
     </header>
@@ -50,8 +50,7 @@
             </ul>
         </div>
             </div>
-        </div>
-        <a href="#project-section" class="click_here"> click here<br><pre>   &DownArrow;</pre> </a>
+            <a href="#project-section" class="click_here"> click here<br><pre> &DownArrow;</pre> </a>
     </section>
     <section id="project-section">
         <div class="flex-container">
@@ -89,7 +88,7 @@
                     </div>
             </details>
             <details>
-                <summary><span class="number">2 &downarrow;</span><h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h2></summary>
+                <summary id="summary"><span class="number">2 &downarrow;</span><h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h2></summary>
                 <div class="text-container">
                     <li>02/2019 – 08/2021</li>
                     <b>Die schwedische Menschenrechtsorganisation „We Act“, Kabul, Afghanistan</b>
@@ -115,27 +114,30 @@
                     <p>Bitte klicken Sie auf den "CV"-Button (unten in der rechten Ecke), um weitere Informationen über mich zu erhalten. </p>
               </div>
             </details>
+            <a href="#grid-container" class="click_on_me">Click on me <br><pre>    &DownArrow;</pre></a>
         </div>
-        <a href="#grid-container" class="click_on_me">Click on me <br><pre>    &DownArrow;</pre></a>
     </section>
     <footer>
         <div id="grid-container">
-            <span id="at-symbole">@</span>
+                <span id="at_symbole">@</span>
             <div class="det">
-                <h3>Kontakt</h3>
                 <a href="mailto:Farzadsarfarazwvo@gmail.com" class="myemail"><i class='bx bxl-gmail'></i></a>
                 <a href="tel:+4915750074356" class="mynum"><i class='bx bx-phone'></i></a>
-            </div>
-            <div>
                 <a href="https://github.com/Farzadsarfaraz" target="_blank" class="Github"><i class='bx bxl-github'></i></a>
-                </div>
+            </div>
         </div>
         <div class="social">
+            <div>
+        <a href="https://maps.app.goo.gl/bFL5yuMSCMpoypVC8" class="standort"><i class='bx bx-map'></i></a>
+    </div>
+    <div>
         <a href="https://www.facebook.com/Farzad004/"><i class='bx bxl-facebook-circle'></i></a>
         <a href="https://www.instagram.com/farzad_sarfaraz/"><i class='bx bxl-instagram' ></i></a>
         <a href="https://www.linkedin.com/in/farzad-sarfaraz-04871421a/"><i class='bx bxl-linkedin-square' ></i></a>
-        <a href="https://maps.app.goo.gl/bFL5yuMSCMpoypVC8" class="standort"><i class='bx bx-map'></i></a>
-        <a href="F. Sarfaraz Lebenslauf.pdf" class="click_here2" target="_blank" style.float="right">C<i class='bx bxs-file-pdf'></i>V</a>
+    </div>
+    <div>
+        <a href="F. Sarfaraz Lebenslauf.pdf" class="CV" target="_blank" style.float="right">C<i class='bx bxs-file-pdf'></i>V</a>
+    </div>
     </div>
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
