--- a/My-projekt.html
+++ b/My-projekt.html
@@ -20,9 +20,10 @@
             <div class="first_child_container">
             <h1> Farzad Sarfaraz</h1>
             <h2> über mich </h2>
-            <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz,<br> und ich bin ein Anfänger in der Webentwicklung und im Programmieren.
-                 <br> Momentan suche ich nach einer interessanten Ausbildung oder <br>Studienangeboten im Bereich Informatik. Es freut mich sehr,<br> Sie hier begrüßen zu dürfen.<br>
-                 Gerne gebe ich Ihnen einen Einblick in meine Welt.</p>
+            <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz,
+             und ich bin ein Anfänger in der Webentwicklung und im Programmieren.
+            Momentan suche ich nach einer interessanten Ausbildung oder Studienangeboten im Bereich Informatik.
+            Es freut mich sehr, Sie hier begrüßen zu dürfen. Gerne gebe ich Ihnen einen Einblick in meine Welt.</p>
             <br/>
             <a href="#skill-section" class="read-more">Mehr erfahren<i class='bx bxs-right-arrow'></i></a>
         </div>
@@ -32,31 +33,31 @@
         <h2> Mein Skillset</h2>
         <div class="wrapper">
             <div class="skill-container">
-            <h3> EDV </h3>
-            <ul>
-                <li><i class='bx bxl-python'> Python</i><progress max="100" value="20"></progress></li>
-                <li> <i class='bx bxl-javascript'> JavaScript</i><progress max="100" value="70"></progress></li>
-                <li><i class='bx bxs-file-html'> HTML</i> <progress max="100" value="95"></progress></li>
-                <li><i class='bx bxl-css3' > CSS</i><progress max="100" value="90" ></progress></li>
-                <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90" ></progress></li>
-            </ul>
+               <h3> EDV </h3>
+               <ul>
+                 <li><i class='bx bxl-python'> Python</i><progress max="100" value="20"></progress></li>
+                 <li> <i class='bx bxl-javascript'> JavaScript</i><progress max="100" value="70"></progress></li>
+                 <li><i class='bx bxs-file-html'> HTML</i> <progress max="100" value="95"></progress></li>
+                 <li><i class='bx bxl-css3' > CSS</i><progress max="100" value="90" ></progress></li>
+                 <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90" ></progress></li>
+              </ul>
         </div>
             <div class="skill-container">
                 <h3> Sprachkenntnisse </h3>
-            <ul>
-                <li> Deutsch C1 <progress max="100" value="96"></progress></li>
-                <li> Englisch C1 <progress max="100" value="90"></progress></li>
-                <li> Persisch <progress max="100" value="100" ></progress></li>
-            </ul>
+                <ul>
+                  <li> Deutsch C1 <progress max="100" value="96"></progress></li>
+                  <li> Englisch C1 <progress max="100" value="90"></progress></li>
+                  <li> Persisch <progress max="100" value="100" ></progress></li>
+               </ul>
+           </div>
         </div>
-            </div>
             <a href="#project-section" class="click_here"> click here<br><pre> &DownArrow;</pre> </a>
     </section>
     <section id="project-section">
         <div class="flex-container">
             <h2> Mein Werdegang </h2>
             <details>
-                <summary id="summary"><span class="number">1 &downarrow;</span><h3>BILDUNGSWEG (hier anklicken)</h2></summary>
+                <summary id="summary"><span class="number">1 &downarrow;</span><h3>BILDUNGSWEG (hier anklicken)</h3></summary>
                     <div class="text-container">
                         <li>ab 04/2024 – 07/2024</li>
                         <p>Weiterbildung Front-End Developement, ReDi-School of Digital Integration, München</p>
@@ -88,28 +89,28 @@
                     </div>
             </details>
             <details>
-                <summary id="summary"><span class="number">2 &downarrow;</span><h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h2></summary>
+                <summary id="summary"><span class="number">2</span><h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h3></summary>
                 <div class="text-container">
                     <li>02/2019 – 08/2021</li>
-                    <b>Die schwedische Menschenrechtsorganisation „We Act“, Kabul, Afghanistan</b>
+                    <p>Die schwedische Menschenrechtsorganisation „We Act“, Kabul, Afghanistan</p>
                     <pre>   • Projektmanager und Übersetzer (Englisch – Persisch) </pre>
                     <br>
                     <li>06/2018 – 12/2018</li>
-                    <b>Sprachinstitut (Star Institut), Kabul, Afghanistan</b>
+                    <p>Sprachinstitut (Star Institut), Kabul, Afghanistan</p>
                     <pre>   • Englisch-Lehrer </pre>
                     <br>
                     <li>01/2018 – 06/2018</li>
-                    <b>Rainbow Social and Cultural Organization (RSCO-Network), Kabul, Afghanistan</b>
+                    <p>Rainbow Social and Cultural Organization (RSCO-Network), Kabul, Afghanistan</p>
                     <pre>   • Verantwortlicher im Bereich Umweltbewusstsein </pre>
                     <br>
                     <li>01/2022 – heute</li>
-                    <b>Bellevue di Monaco, München, Deutschland</b>
+                    <p>Bellevue di Monaco, München, Deutschland</p>
                     <pre>   • Tätigkeiten als Übersetzer (Deutsch –Persisch) und Ehrenamtlicher </pre>
                     <br>
                 </div>
             </details>
             <details>
-                <summary id="summary"><span class="number">3 &downarrow;</span><h3>Weitere Informationen (hier anklicken)</h2></summary>
+                <summary id="summary"><span class="number">3 &downarrow;</span><h3>Weitere Informationen (hier anklicken)</h3></summary>
                 <div class="text-container">
                     <p>Bitte klicken Sie auf den "CV"-Button (unten in der rechten Ecke), um weitere Informationen über mich zu erhalten. </p>
               </div>
@@ -119,7 +120,7 @@
     </section>
     <footer>
         <div id="grid-container">
-                <span id="at_symbole">@</span>
+            <span id="at_symbole">@</span>
             <div class="det">
                 <a href="mailto:Farzadsarfarazwvo@gmail.com" class="myemail"><i class='bx bxl-gmail'></i></a>
                 <a href="tel:+4915750074356" class="mynum"><i class='bx bx-phone'></i></a>
@@ -127,18 +128,18 @@
             </div>
         </div>
         <div class="social">
-            <div>
+        <div>
+          <a href="https://www.facebook.com/Farzad004/"><i class='bx bxl-facebook-circle'></i></a>
+          <a href="https://www.instagram.com/farzad_sarfaraz/"><i class='bx bxl-instagram' ></i></a>
+          <a href="https://www.linkedin.com/in/farzad-sarfaraz-04871421a/"><i class='bx bxl-linkedin-square' ></i></a>
+      </div>
+      <div>
         <a href="https://maps.app.goo.gl/bFL5yuMSCMpoypVC8" class="standort"><i class='bx bx-map'></i></a>
-    </div>
-    <div>
-        <a href="https://www.facebook.com/Farzad004/"><i class='bx bxl-facebook-circle'></i></a>
-        <a href="https://www.instagram.com/farzad_sarfaraz/"><i class='bx bxl-instagram' ></i></a>
-        <a href="https://www.linkedin.com/in/farzad-sarfaraz-04871421a/"><i class='bx bxl-linkedin-square' ></i></a>
-    </div>
-    <div>
-        <a href="F. Sarfaraz Lebenslauf.pdf" class="CV" target="_blank" style.float="right">C<i class='bx bxs-file-pdf'></i>V</a>
-    </div>
-    </div>
+       </div>
+        <div>
+          <a href="F. Sarfaraz Lebenslauf.pdf" class="CV" target="_blank" style.float="right">C<i class='bx bxs-file-pdf'></i>V</a>
+        </div>
+      </div>
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="new.js"></script>
