--- a/My-projekt.html
+++ b/My-projekt.html
@@ -39,11 +39,12 @@
                 <h3> EDV </h3>
                 <ul>
                     <li><i class='bx bxl-python'> Python</i><progress max="100" value="20"></progress></li>
-                    <li> <i class='bx bxl-javascript'> JavaScript</i><progress max="100" value="70"></progress></li>
+                    <li><i class='bx bxl-javascript'> JavaScript</i><progress max="100" value="70"></progress></li>
+                    <li><i class='bx bxl-react'> React</i><progress max="100" value="20"></progress></li>
                     <li><i class='bx bxs-file-html'> HTML</i> <progress max="100" value="95"></progress></li>
                     <li><i class='bx bxl-css3'> CSS</i><progress max="100" value="90"></progress></li>
-                    <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90"></progress>
-                    </li>
+                    <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90"></progress></li>
+
                 </ul>
             </div>
             <div class="skill-container">
@@ -128,10 +129,9 @@
                         mich zu erhalten. </p>
                 </div>
             </details>
-            <a href="#grid-container" class="click_on_me">Click on me <br>
-                <pre>    &DownArrow;</pre>
-            </a>
         </div>
+        <br>
+        <br>
     </section>
     <footer>
         <div id="grid-container">
