--- a/My-projekt.html
+++ b/My-projekt.html
@@ -22,10 +22,7 @@
             <div class="first_child_container">
                 <h1> Farzad Sarfaraz</h1>
                 <h2> über mich </h2>
-                <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz,
-                    und ich bin ein Anfänger in der Webentwicklung und im Programmieren.
-                    Momentan suche ich nach einer interessanten Ausbildung oder Studienangeboten im Bereich Informatik.
-                    Es freut mich sehr, Sie hier begrüßen zu dürfen. Gerne gebe ich Ihnen einen Einblick in meine Welt.
+                <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz, und ich bin ein Front-End-Entwickler. Momentan suche ich nach einem Job im Bereich Front-End-Development oder einer interessanten Ausbildung im Bereich Anwendungsentwicklung. Es freut mich sehr, Sie hier begrüßen zu dürfen. Gerne gebe ich Ihnen einen Einblick in meine Welt.
                 </p>
                 <br />
                 <a href="#skill-section" class="read-more">Mehr erfahren<i class='bx bxs-right-arrow'></i></a>
