--- a/My-projekt.html
+++ b/My-projekt.html
@@ -40,14 +40,14 @@
                     <li><i class='bx bxl-react'> React</i><progress max="100" value="90"></progress></li>
                     <li><i class='bx bxs-file-html'> HTML</i> <progress max="100" value="100"></progress></li>
                     <li><i class='bx bxl-css3'> CSS</i><progress max="100" value="100"></progress></li>
+                    <li><i class='bx bxl-css3'> node.js</i><progress max="100" value="30"></progress></li>
                     <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90"></progress></li>
-
                 </ul>
             </div>
             <div class="skill-container">
                 <h3> Sprachkenntnisse </h3>
                 <ul>
-                    <li> Deutsch C1 <progress max="100" value="96"></progress></li>
+                    <li> Deutsch C1 <progress max="100" value="90"></progress></li>
                     <li> Englisch C1 <progress max="100" value="90"></progress></li>
                     <li> Persisch <progress max="100" value="100"></progress></li>
                 </ul>
@@ -99,21 +99,24 @@
                     <h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h3>
                 </summary>
                 <div class="text-container">
+                    <li>08/2024 – heute</li>
+                    <p>Digitalschmiede Bayern, München</p>
+                    <pre>  • Front-end entwickler </pre>
                     <li>02/2019 – 08/2021</li>
                     <p>Die schwedische Menschenrechtsorganisation „We Act“, Kabul, Afghanistan</p>
-                    <pre>   • Projektmanager und Übersetzer (Englisch – Persisch) </pre>
+                    <pre>  • Projektmanager und Übersetzer (Englisch – Persisch) </pre>
                     <br>
                     <li>06/2018 – 12/2018</li>
                     <p>Sprachinstitut (Star Institut), Kabul, Afghanistan</p>
-                    <pre>   • Englisch-Lehrer </pre>
+                    <pre>  • Englisch-Lehrer </pre>
                     <br>
                     <li>01/2018 – 06/2018</li>
                     <p>Rainbow Social and Cultural Organization (RSCO-Network), Kabul, Afghanistan</p>
-                    <pre>   • Verantwortlicher im Bereich Umweltbewusstsein </pre>
+                    <pre>  • Verantwortlicher im Bereich Umweltbewusstsein </pre>
                     <br>
                     <li>01/2022 – heute</li>
                     <p>Bellevue di Monaco, München, Deutschland</p>
-                    <pre>   • Tätigkeiten als Übersetzer (Deutsch –Persisch) und Ehrenamtlicher </pre>
+                    <pre>  • Tätigkeiten als Übersetzer (Deutsch –Persisch) und Ehrenamtlicher </pre>
                     <br>
                 </div>
             </details>
