--- a/My-projekt.html
+++ b/My-projekt.html
@@ -40,7 +40,7 @@
                     <li><i class='bx bxl-react'> React</i><progress max="100" value="90"></progress></li>
                     <li><i class='bx bxs-file-html'> HTML</i> <progress max="100" value="100"></progress></li>
                     <li><i class='bx bxl-css3'> CSS</i><progress max="100" value="100"></progress></li>
-                    <li><i class='bx bxl-css3'> node.js</i><progress max="100" value="30"></progress></li>
+                    <li><i class='bx bxl-nodejs'> node.js</i><progress max="100" value="30"></progress></li>
                     <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90"></progress></li>
                 </ul>
             </div>
