--- a/My-projekt.html
+++ b/My-projekt.html
@@ -40,7 +40,7 @@
                     <li><i class='bx bxl-react'> React</i><progress max="100" value="90"></progress></li>
                     <li><i class='bx bxs-file-html'> HTML</i> <progress max="100" value="100"></progress></li>
                     <li><i class='bx bxl-css3'> CSS</i><progress max="100" value="100"></progress></li>
-                    <li><i class='bx bxl-nodejs'> node.js</i><progress max="100" value="30"></progress></li>
+                    <li><i class='bx bxl-nodejs'> node.js</i><progress max="100" value="70"></progress></li>
                     <li> <i class='bx bxl-microsoft'> Microsoft Office</i> <progress max="100" value="90"></progress></li>
                 </ul>
             </div>
@@ -99,9 +99,9 @@
                     <h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h3>
                 </summary>
                 <div class="text-container">
-                    <li>08/2024 – heute</li>
+                    <li>08/2024 – 11/2024</li>
                     <p>Digitalschmiede Bayern, München</p>
-                    <pre>  • Front-end entwickler </pre>
+                    <pre>  • Softwareentwickler </pre>
                     <br>
                     <li>02/2019 – 08/2021</li>
                     <p>Die schwedische Menschenrechtsorganisation „We Act“, Kabul, Afghanistan</p>
