--- a/My-projekt.html
+++ b/My-projekt.html
@@ -35,6 +35,7 @@
             <div class="skill-container">
                 <h3> EDV </h3>
                 <ul>
+                    <li><i class='bx bx-table'> SAP ABAP </i><progress max="100" value="90"></progress></li>
                     <li><i class='bx bxl-python'> Python</i><progress max="100" value="20"></progress></li>
                     <li><i class='bx bxl-javascript'> JavaScript</i><progress max="100" value="90"></progress></li>
                     <li><i class='bx bxl-react'> React</i><progress max="100" value="90"></progress></li>
