--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="first_child_container">
                 <h1> Farzad Sarfaraz</h1>
                 <h2> über mich </h2>
-                <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz, und ich bin ein Front-End-Entwickler. Momentan suche ich nach einem Job im Bereich Front-End-Development. Es freut mich sehr, Sie hier begrüßen zu dürfen. Gerne gebe ich Ihnen einen Einblick in meine Welt.
+                <p> Herzlich Willkommen auf meiner Internetseite! Mein Name ist Farzad Sarfaraz, und ich bin ein Front-End und SAP-ABAP-Entwickler. Es freut mich sehr, Sie hier begrüßen zu dürfen. Gerne gebe ich Ihnen einen Einblick in meine Welt.
                 </p>
                 <br />
                 <a href="#skill-section" class="read-more">Mehr erfahren<i class='bx bxs-right-arrow'></i></a>
@@ -68,6 +68,9 @@
                     <h3>BILDUNGSWEG (hier anklicken)</h3>
                 </summary>
                 <div class="text-container">
+                    <li>12.2024 – heute</li>
+                    <p>Weiterbildung SAP-ABAP, S4/HANA, RAP, Socialbee GmbH, München</p>
+                    <br>
                     <li>ab 04/2024 – 07/2024</li>
                     <p>Weiterbildung Front-End Developement, ReDi-School of Digital Integration, München</p>
                     <br>
@@ -102,6 +105,10 @@
                     <h3>PRAKTISCHE ERFAHRUNGEN (hier anklicken)</h3>
                 </summary>
                 <div class="text-container">
+                    <li>02/2025 – heute</li> 
+                    <p>Stadtwerke München, München</p>
+                    <pre>  • SAP ABAP Entwickler </pre>
+                    <br>
                     <li>08/2024 – 11/2024</li>
                     <p>Digitalschmiede Bayern, München</p>
                     <pre>  • Softwareentwickler (Fullstack) </pre>
